# catknows

./: .env.example  .gitignore  DEV_CHECKLIST.md  PROJECT_HANDOVER.md  README.md  alembic.ini  cookie.txt  daily_runner.py  instructions.md  multi_tenant_runner.py  notify_reports_local.py  requirements.txt  setup.cfg  setup.py  skool.db  tenants.json  top5.py  update_all.ps1  update_all.py  update_skoolhud.ps1  verify_system.py
.github/: copilot-instructions.md
.github/scripts/: discord_notify.py
.github/workflows/: ci-validate-schemas.yml  ci.yml  daily.yml  docs-update.yml  notify_test.yml  run-tests.yml  validate-workflows-ci.yml
alembic/: env.py
alembic/alembic/: alemib.ini  env.py
bots/: discord_bot.py
scripts/: add_skool_tag_column.py  backfill_joined_date.py  backfill_run_status.py  check_discord_env.py  check_discord_token.py  check_webhooks.py  debug_member_daily_schema.py  find_latest_reports.py  generate_shoutouts.py  list_runs.py  notify_reports_local.py  ollama_manager.py  probe_ollama.py  recreate_member_daily_snapshot.py  run_ai_insights.py  run_full_pipeline.py  run_orchestrator_with_env.py  run_smoke_tests.py  run_validator.py  setup.ps1  show_latest_dispatch.py  test_ollama.py  test_webhooks.py  update_copilot_instructions.py  validate_reports.py
skoolhud/: __init__.py  __main__.py  cleanup_repo.py  cli.py  config.py  db.py  fetcher.py  models.py  multi_tenant_runner.py  normalizer.py  utils.py
skoolhud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_post_guard.py  test_smoke_agents.py
(+53 files in other folders)
